--- a/notebooks/titanic_eda.ipynb
+++ b/notebooks/titanic_eda.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 217,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "<AxesSubplot: xlabel='Pclass', ylabel='Age'>"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "Text(0.5, 1.0, 'Survived vs Not Survived')"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "Text(0.5, 1.0, 'Age Distribution')"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "Text(0.5, 1.0, 'Age Distribution of All Males')"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "Text(0.5, 1.0, 'Age Distribution of All Females')"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "Name: Age, Length: 714, dtype: float64"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "Text(0.5, 1.0, 'Age Distributions and Densities, Both Sexes')"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -729,14 +729,15 @@
     }
    ],
    "source": [
-    "sns.histplot(age_and_sex, x='Age', hue='Sex', bins=30, kde=True, palette='deep', edgecolor='black')\n",
+    "sns.histplot(age_and_sex, x='Age', hue='Sex', bins=30, kde=True, \n",
+    "             palette='deep', edgecolor='black')\n",
     "plt.title('Age Distributions and Densities, Both Sexes')\n",
     "# plt.savefig('age_distributions_all.png', dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +748,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +794,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 318,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +945,7 @@
        "4            5         0       3  0.0  35.0      0      0   8.0500       0.0"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -1067,16 +1068,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_class_women, second_class_women, third_class_women, first_class_men, second_class_men, third_class_men = separate_passengers_by_gender_and_class(train, genders, pclasses)"
+    "first_class_women, second_class_women, third_class_women, \\\n",
+    "first_class_men, second_class_men, third_class_men \\\n",
+    "    = separate_passengers_by_gender_and_class(train, genders, pclasses)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -1085,30 +1088,32 @@
        "[40.0, 30.0, 25.0, 35.0, 28.0, 21.5]"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 328,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#List comprehension to calculate median age for each dataframe in list of dataframes\n",
-    "frames_list = [first_class_men, second_class_men, third_class_men, first_class_women, second_class_women, third_class_women]\n",
+    "frames_list = [first_class_men, second_class_men, third_class_men, \n",
+    "               first_class_women, second_class_women, third_class_women]\n",
     "median_ages = [df['Age'].median() for df in frames_list]\n",
     "median_ages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classes = ['1st Class Males', '2nd Class Males', '3rd Class Males', '1st Class Females', '2nd Class Females', '3rd Class Females']"
+    "classes = ['1st Class Males', '2nd Class Males', '3rd Class Males', \n",
+    "           '1st Class Females', '2nd Class Females', '3rd Class Females']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1127,7 @@
        " '3rd Class Females': 21.5}"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 330,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
